@@ -151,8 +151,9 @@ def wasHistory_broken():
 #
 #-------------------------------------------------------------------------
 
-def family_name(family,db,noname=_("unknown")):
+def family_name(family, db, noname=_("unknown")):
     """Builds a name for the family from the parents names"""
+
     father_handle = family.get_father_handle()
     mother_handle = family.get_mother_handle()
     father = db.get_person_from_handle(father_handle)
@@ -171,7 +172,7 @@ def family_name(family,db,noname=_("unknown")):
         name = noname
     return name
 
-def family_upper_name(family,db):
+def family_upper_name(family, db):
     """Builds a name for the family from the parents names"""
     father_handle = family.get_father_handle()
     mother_handle = family.get_mother_handle()
@@ -187,7 +188,6 @@ def family_upper_name(family,db):
         name = mother.get_primary_name().get_upper_name()
     return name
         
-
 #-------------------------------------------------------------------------
 #
 #
